Bug 144578 - The outline numbering is showing all levels even though the "Show sublevels" is set as "1"
Summary: The outline numbering is showing all levels even though the "Show sublevels" ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, regression
Depends on:
Blocks: Bullet-Number-Outline-Lists regressions-loext-num-list-format
  Show dependency treegraph
 
Reported: 2021-09-18 02:31 UTC by Kevin Suo
Modified: 2024-04-23 03:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test odt file (14.65 KB, application/vnd.oasis.opendocument.text)
2021-09-18 02:31 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2021-09-18 02:31:07 UTC
Created attachment 175100 [details]
test odt file

The attached ODT file contains outline numbering. The outline numbering is showing all sub-levels (e.g., "III.A.1."), even though the "Show sublevels" for each 1-3 levels are set to "1".

Steps to Reproduce:
1. Open the attached ODT file.
2. Go to "Tools > Outline Numbering", observe in tab "Numbering" that the "Show sublevels" for both level 1, 2, 3 are set to "1".

Current Result:
The Numbering for this document is wrongly showing as :
    I. 
    II. 
        II.A. 
        II.B. 
    III. 
        III.A. 
            III.A.1. 
            III.A.2. 
        III.B. 
        III.C. 
            III.C.1. 
            III.C.2. 

Expected:
The Numbering for this document, when opened, should be:
    I. 
    II. 
        A. 
        B. 
    III. 
        A. 
            1. 
            2. 
        B. 
        C. 
            1. 
            2. 
and adjusting the "Show sublevels" option in "Tools > Outline Numbering" dialog should work.
Comment 1 Kevin Suo 2021-09-18 02:36:10 UTC
Bibisected to the following range:
7c95c16deba9 tdf#143107 related: ensure correct order of which ids
aa5c6d127559 new ODF numbered list parameter loext:num-list-format
99ef46fdb2a9 tdf#143105 Don't export empty URLs to PDF
f79a8f578ab5 Update git submodules

Within which aa5c6d127559 may be the only one related.
commit aa5c6d127559912ad60a63fbd972b78fb8f9691b
Author: Vasily Melenchuk <vasily.melenchuk@cib.de>
Date:   Mon Jun 14 14:27:56 2021 +0300
    new ODF numbered list parameter loext:num-list-format

Adding Vasily Melenchuk to CC list, would you please take a look? Thanks.
Comment 2 Kevin Suo 2021-09-18 04:46:57 UTC
Adding Justin Luth to cc, I think you may also be interested in this one since you have committed various "chapter number" related fixes recently.
Comment 3 Vasily Melenchuk (CIB) 2021-09-27 10:17:23 UTC
As far as I see, in given doc first three levels are having loext:num-list-format="%1%.%2%.%3%." (or similar) for list format. It has more prio (since it exists) to use than older prefix/suffix stuff. So only problem with given doc is correct display of included levels in numbering properties (for third level we should see 3 in dialog, not 1). Going to fix this issue.
Comment 4 Commit Notification 2021-10-04 13:31:09 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6bf21d2d5efb231c877eb985997b28033198600

tdf#144578: numbering: generate include upper levels for UI

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-10-05 10:38:10 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/077352a58976f1b1f3c4a8744a32c3bd61f6559f

tdf#144578: numbering: generate include upper levels for UI

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.