tdf#144578: numbering: generate include upper levels for UI

In spite of used list format in ODF for UI we still need to
show prefix/suffix (already was there) and included upper
levels (done in this patch) for correct visualization of
level properties.

Moved initialization of ListLevel to later steps to avoid
overriding of generated values for prefix, suffix and
IncludeUpperLevel by some invalid values.

Change-Id: I5d132426c06021ed526d16fb09276523105aa7b9